# bazel-react-example

./: .bazelrc  .gitignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: BUILD  index.html  package.json  tsconfig.json  vite.config.mjs
frontend/src/: App.tsx  index.tsx
